Fix extra padding above content
git-svn-id: https://trac.osuosl.org/svn/osl-d6-theme@6 c9f44b58-19b6-4b3e-80f6-ddd52f32771b

--- a/osuosl/osuosl.css
+++ b/osuosl/osuosl.css
@@ -883,3 +883,7 @@ a.advisory_company
 #osu-identity {
     /*border: 4px solid red;*/
 }
+.with-navbar #content, .with-navbar #sidebar-left, .with-navbar #sidebar-right
+  {
+    margin-top: .1em;
+  }
